--- a/RB.Assemblies.nuspec
+++ b/RB.Assemblies.nuspec
@@ -6,6 +6,7 @@
     <authors>mastahg, Bossland GmbH</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectUrl>https://github.com/TheManta/RB.Assemblies</projectUrl>
+    <repository type="git" url="https://github.com/TheManta/RB.Assemblies" />
     <description>Stripped reference assemblies for Reborn Buddy.</description>
     <tags>reborn-buddy ffxiv ff14</tags>
     <dependencies>
