--- a/.github/workflows/strip.yml
+++ b/.github/workflows/strip.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: "Checkout Repository"
         uses: "actions/checkout@v2"
-      
+
       - name: "Restore Previous ETag"
         # Errors when ETags folder is missing, which is okay
         # Implies this is first run or no ETags previously stored
@@ -19,21 +19,21 @@ jobs:
         uses: "actions/download-artifact@v2"
         with:
           name: "etags"
-      
+
       - name: "Download if Newer"
         # Use etags to determine if file is newer and should be downloaded
         shell: "bash"
         run: |
           mkdir -p etags
           curl -L --etag-compare etags/RebornBuddy64.etag --etag-save etags/RebornBuddy64.etag http://updates.buddyauth.com/GetNewest?filter=Rebornbuddy64 -o RebornBuddy64.zip
-      
+
       - name: "Verify Downloaded"
         # If file wasn't newer, it wasn't downloaded and shouldn't exist on disk
         id: check_download
         uses: andstor/file-existence-action@v1
         with:
           files: "RebornBuddy64.zip"
-      
+
       - name: "Cancel if Older"
         # If no new download to process, cancel here
         uses: andymckay/cancel-action@0.2
@@ -46,41 +46,47 @@ jobs:
           mkdir -p extracted
           unzip -p RebornBuddy64.zip RebornBuddy.exe > extracted/RebornBuddy.exe
           unzip -p RebornBuddy64.zip GreyMagic.dll > extracted/GreyMagic.dll
-      
+
       - name: "Download Assembly Stripper"
         uses: "robinraju/release-downloader@v1"
         with:
           repository: "TheManta/AssemblyStripper"
           tag: "v0.1.0"
           fileName: "AssemblyStripper-v0.1.0.zip"
-      
+
       - name: "Extract Assembly Stripper"
         shell: "bash"
         run: |
           unzip AssemblyStripper-v0.1.0.zip
-      
+
       - name: "Strip Assemblies"
         # Run Assembly Stripper on chosen files.  Outputs to extracted/Stripped/
         shell: "bash"
         run: |
           ./AssemblyStripper/AssemblyStripper.exe extracted
-      
+
       - name: Install NuGet
         uses: nuget/setup-nuget@v1
-      
+
       - name: Configure NuGet Sources
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          nuget sources add -Name "GitHub/TheManta" -Source "https://nuget.pkg.github.com/TheManta/index.json" -UserName "${Env:GITHUB_ACTOR}" -Password "${Env:GITHUB_TOKEN}"
-      
+          $GITHUB_OWNER = $Env:GITHUB_REPOSITORY.Split("/", 2)[0]
+          nuget sources add -Name "GitHub/${GITHUB_OWNER}" -Source "https://nuget.pkg.github.com/${GITHUB_OWNER}/index.json" -UserName "${Env:GITHUB_ACTOR}" -Password "${Env:GITHUB_TOKEN}"
+
       - name: "NuGet Pack and Push"
         # Force package version to EXE's version before uploading
         shell: "powershell"
+        env:
+          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          $GITHUB_OWNER = $Env:GITHUB_REPOSITORY.Split("/", 2)[0]
           $version = [System.Reflection.Assembly]::LoadFrom("$(pwd)/extracted/Stripped/RebornBuddy.exe").GetName().Version.ToString()
           nuget pack -BasePath "extracted/Stripped" -Version $version
-          nuget push **/*.nupkg -SkipDuplicate -NoSymbols -Source "GitHub/TheManta"
+          nuget push **/*.nupkg -SkipDuplicate -NoSymbols -Source "GitHub/${GITHUB_OWNER}" -ApiKey "${Env:GITHUB_TOKEN}"
+          nuget push **/*.nupkg -SkipDuplicate -NoSymbols -Source "nuget.org" -ApiKey "${Env:NUGET_API_KEY}"
 
       - name: "Store ETags"
         # Store download ETags for comparison next run
